test api improvement